add nightwatch tests

--- a/i18n/br.i18n.json
+++ b/i18n/br.i18n.json
@@ -12,7 +12,7 @@
 	"Register" : "Registro de Usuario",
 	"Hi" : "Oi",
 	"Register" : "Registrar",
-	"Login" : "IR",
+	"Do Login" : "IR",
 	"New Users" : "Novos Usuários",
 	"My Cards" : "Meus Cards",
 	"All Cards" : "Todos os Cards",
